@@ -1228,7 +1228,7 @@ operator|.
 name|MIN_VALUE
 argument_list|)
 decl_stmt|;
-name|Integer
+name|int
 name|alternativeTermCount
 init|=
 name|params
@@ -1238,6 +1238,8 @@ argument_list|(
 name|SpellingParams
 operator|.
 name|SPELLCHECK_ALTERNATIVE_TERM_COUNT
+argument_list|,
+literal|0
 argument_list|)
 decl_stmt|;
 name|Integer
@@ -1370,8 +1372,8 @@ elseif|else
 if|if
 condition|(
 name|alternativeTermCount
-operator|!=
-literal|null
+operator|>
+literal|0
 condition|)
 block|{
 name|suggestMode
