@@ -1090,7 +1090,7 @@ name|options
 operator|.
 name|alternativeTermCount
 operator|==
-literal|null
+literal|0
 operator|||
 name|docFreq
 operator|==
@@ -1144,7 +1144,7 @@ name|options
 operator|.
 name|alternativeTermCount
 operator|==
-literal|null
+literal|0
 condition|)
 block|{
 comment|// These are spelled the same, continue on
@@ -1157,8 +1157,8 @@ condition|(
 name|options
 operator|.
 name|alternativeTermCount
-operator|!=
-literal|null
+operator|>
+literal|0
 operator|&&
 name|docFreq
 operator|>
