@@ -3166,6 +3166,62 @@ argument_list|,
 literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='collation']/lst[@name='misspellingsAndCorrections']/str[@name='june']='jane'"
 argument_list|)
 expr_stmt|;
+comment|//SOLR-5090, alternativeTermCount==0 was being evaluated, sometimes would throw NPE
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"teststop:(june customs)"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"qt"
+argument_list|,
+literal|"spellCheckCompRH"
+argument_list|,
+literal|"indent"
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_DICT
+argument_list|,
+name|dictionary
+index|[
+name|i
+index|]
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"10"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_ALTERNATIVE_TERM_COUNT
+argument_list|,
+literal|"0"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 annotation|@
