@@ -134,6 +134,9 @@ Bug Fixes
 
 * SOLR-6023: FieldAnalysisRequestHandler throws NPE if no parameters are supplied.
   (shalin)
+  
+* SOLR-5090: SpellCheckComponent sometimes throws NPE if 
+  "spellcheck.alternativeTermCount" is set to zero (James Dyer).
 
 Other Changes
 ---------------------
